Fine tune spacings and prevent image shrinkage

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -168,6 +168,7 @@ section hr {
     top: 50%;
     position: absolute;
     transform: translate(0,-50%);
+    padding-right: 8px;
 }
 
 .project-info p {
@@ -339,6 +340,7 @@ section hr {
     display: flex;
     flex-flow: row wrap;
     max-width: 1500px;
+    margin-right: 8px;
 }
 
 .cards-flex .card {
@@ -352,6 +354,7 @@ section hr {
 
 .cards-flex .card img {
     display: block;
+    flex-shrink: 0;
 }
 
 .cards-flex .card h2 {
